# bitclk

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  cli.rs  color.rs  color_engine.rs  main.rs  terminal.rs  theme.rs
src/modes/: clock.rs  mod.rs  stopwatch.rs  theme_demo.rs  timer.rs
src/render/: binary_clock.rs  brick_text.rs  mod.rs  normal_clock.rs
